# platformer

./: .gitignore  CMakeLists.txt
graphics/: guy_left.xcf  guy_right.xcf
src/: CMakeLists.txt  guy.cpp  guy.hpp  guy_graphics.cpp  guy_graphics.hpp  guy_main.cpp  guy_manager.cpp  guy_manager.hpp  main.cpp  map.cpp  map.hpp  platformer.cpp  platformer.hpp  window.cpp  window.hpp
src/tests/: test_platformer.cpp
tests/: test_guy.cpp  test_map.cpp  test_platformer.cpp
